@@ -547,6 +547,9 @@ PF_TABLE_FILTER=Filter:
 
 PF_FILTER_BUTTON_CLOSE=Clo&se
 
+PF_OPEN_SOURCE_FILE=Open Source File
+PF_OPEN_TARGET_FILE=Open Target File 
+
 GUI_PROJECT_TOTAL_SEGMENTS=Total number of segments
 
 GUI_PROJECT_UNIQUE_SEGMENTS=Number of unique segments
